--- a/guangdi_net/package.json
+++ b/guangdi_net/package.json
@@ -8,6 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
+    "lib-flexible": "^0.3.2",
+    "mint-ui": "^2.2.13",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
@@ -16,8 +20,11 @@
     "@vue/cli-plugin-eslint": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "postcss-loader": "^3.0.0",
+    "postcss-px2rem": "^0.3.0",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
