--- a/guangdi_net/package.json
+++ b/guangdi_net/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "better-scroll": "^1.13.2",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
@@ -20,6 +21,7 @@
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-eslint": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
+    "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-component": "^1.1.1",
     "eslint": "^5.8.0",
